--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,14 +1,55 @@
-input:not([type=submit]) {
-  
+.section-form {
+  padding-top: 25px;
+  padding-bottom: 30px;
+  textarea {
+    margin-bottom: 30px;
+  }
 }
+
+.thanks {
+  padding-bottom: 30px;
+  text-align: center;
+  padding-top: 180px;
+  .button {
+    width: 220px;
+    margin-top: 40px;
+    text-align: center;
+  }
+}
+
+// input:not([type=submit]) {
+
+// }
+
+textarea {
+  display: block;
+  width: 100%;
+  resize: none;
+  height: 300px;
+  border: 1px solid #e8e8e8;
+  padding-top: 20px;
+  padding-left: 20px;
+  color: #000;
+  font-family: $hRoman;
+  font-size: 18px;
+  outline: none;
+}
+
 
 input[type=submit] {
   display: inline-block;
   outline: none;
   border: none;
-  
+  padding: 22px 65px 21px;
+  background-color: #ffbb04;
+  color: black;
+  font-size: 18px;
+  -webkit-border-radius: 37px;
+  border-radius: 37px;
+  font-family: $hRoman;
   &:hover {
-    background: #6db82a;
+    background: #eaac04;
+    cursor: pointer;
   }
   &:active {
     -webkit-transform: translateY(1px);    
@@ -16,6 +57,7 @@ input[type=submit] {
     transform: translateY(1px);
   }
 }
-input.error {
-  border: 2px solid red !important;
+input.error,
+textarea.error {
+  border: 1px solid red !important;
 }
