--- a/css/install/main.css
+++ b/css/install/main.css
@@ -496,7 +496,7 @@ body {
 .thanks {
   padding-bottom: 30px;
   text-align: center;
-  padding-top: 180px;
+  padding-top: 171px;
 }
 .thanks .button {
   width: 220px;
@@ -685,10 +685,10 @@ img.wave.w2 {
 .project-wrapp .project-item a {
   display: inline-block;
   text-decoration: none;
+  margin-bottom: 33px;
 }
 .project-wrapp .project-item img {
   display: block;
-  margin-bottom: 33px;
 }
 .project-wrapp .project-item .head {
   color: #636363;
@@ -715,6 +715,10 @@ img.wave.w2 {
   margin-bottom: 11px;
 }
 .project-wrapp .project-item .list li:before {
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   content: '';
   display: block;
   position: absolute;
@@ -912,12 +916,20 @@ h3.icon-1 {
   background: url(../img/icon-1.png) right 3px no-repeat;
   padding: 25px 110px 35px 0;
 }
+h3.icon-2 {
+  background: url(../img/icon-2.png) right 3px no-repeat;
+  padding: 25px 110px 35px 0;
+}
+h3.icon-3 {
+  background: url(../img/icon-3.png) right 3px no-repeat;
+  padding: 25px 110px 35px 0;
+}
 h3.icon-f {
-  background: url(../img/icon-f.jpg) right 25px no-repeat;
+  background: url(../img/icon-f.jpg) right 20px no-repeat;
   padding: 25px 70px 34px 0;
 }
 h3.icon-thx {
-  background: url(../img/icon-thx.jpg) right 15px no-repeat;
+  background: url(../img/icon-thx.jpg) right 10px no-repeat;
   padding: 15px 62px 15px 0;
 }
 
@@ -961,6 +973,12 @@ h3.icon-thx {
 }
 .section-goals .open-link:hover {
   text-decoration: none;
+}
+.section-goals .open-link.sm-2 {
+  background: url(../img/icon-2-sm.png) left top no-repeat;
+}
+.section-goals .open-link.sm-3 {
+  background: none;
 }
 
 .left-l {
