--- a/css/style.css
+++ b/css/style.css
@@ -597,14 +597,13 @@ header.main-header {
 }
 .logo img {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   margin-right: 25px;
 }
 .logo span {
-  margin-top: 11px;
   font-size: 18px;
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   color: black;
 }
 
@@ -718,7 +717,6 @@ img.wave.w2 {
   content: '';
   display: block;
   position: absolute;
-  top: 4px;
   left: 0;
   width: 5px;
   height: 5px;
@@ -726,6 +724,10 @@ img.wave.w2 {
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 .project-wrapp .project-item .list li:last-child {
   margin-bottom: 0;
@@ -909,23 +911,23 @@ h3 {
   display: inline-block;
 }
 h3.icon-1 {
-  background: url(../img/icon-1.png) right 3px no-repeat;
-  padding: 25px 110px 35px 0;
+  background: url(../img/icon-1.png) right center no-repeat;
+  padding: 30px 110px 30px 0;
 }
 h3.icon-2 {
-  background: url(../img/icon-2.png) right 3px no-repeat;
-  padding: 25px 110px 35px 0;
+  background: url(../img/icon-2.png) right center no-repeat;
+  padding: 30px 110px 30px 0;
 }
 h3.icon-3 {
   background: url(../img/icon-3.png) right 3px no-repeat;
   padding: 25px 110px 35px 0;
 }
 h3.icon-f {
-  background: url(../img/icon-f.jpg) right 20px no-repeat;
-  padding: 25px 70px 34px 0;
+  background: url(../img/icon-f.jpg) right center no-repeat;
+  padding: 30px 70px 30px 0;
 }
 h3.icon-thx {
-  background: url(../img/icon-thx.jpg) right 10px no-repeat;
+  background: url(../img/icon-thx.jpg) right center no-repeat;
   padding: 15px 62px 15px 0;
 }
 
@@ -956,7 +958,7 @@ h3.icon-thx {
 }
 .section-goals .open-link {
   margin-top: 44px;
-  background: url(../img/icon-1-sm.png) left top no-repeat;
+  background: url(../img/icon-1-sm.png) left center no-repeat;
   display: inline-block;
   padding-left: 31px;
   padding-top: 2px;
@@ -971,7 +973,7 @@ h3.icon-thx {
   text-decoration: none;
 }
 .section-goals .open-link.sm-2 {
-  background: url(../img/icon-2-sm.png) left top no-repeat;
+  background: url(../img/icon-2-sm.png) left center no-repeat;
 }
 .section-goals .open-link.sm-3 {
   background: none;
